--- a/resources/template.html
+++ b/resources/template.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-  <title></title>
+  <title>TITLE</title>
   <meta http-equiv="content-type" content="text/html; charset=ascii">
   <style type="text/css">
     td.linenos { background-color: #f0f0f0; padding-right: 10px; }
@@ -73,6 +73,8 @@
   </style>
 </head>
 <body>
-DOCUMENTATION
+  
+  DOCUMENTATION
+  
 </body>
 </html>
