switching to tables for code layout -- much more reliable

--- a/resources/template.html
+++ b/resources/template.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <div id="container">
-    DOCUMENTATION
+    <table>
+      <tbody>
+        DOCUMENTATION
+      </tbody>
+    </table>
   </div>
 </body>
 </html>
