--- a/resources/template.html
+++ b/resources/template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="container">
-    <table>
+    <table cellpadding="0" cellspacing="0">
       <tbody>
         DOCUMENTATION
       </tbody>
