--- a/resources/template.html
+++ b/resources/template.html
@@ -4,7 +4,7 @@
 <head>
   <title>TITLE</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" media="all" href="../resources/docco.css" />
+  <link rel="stylesheet" media="all" href="resources/docco.css" />
 </head>
 <body>
   <div id="container">
