updating docco's docco

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ This page is the result of running Docco against its own source file.</p>
 it into a <code>docs</code> folder.</p>
 
 <p>To install Docco, first make sure you have <a href="http://nodejs.org/">Node.js</a>,
-<a href="http://pygments.org/">Pygments</a>, and <a href="http://coffeescript.org/">CoffeeScript</a>.
-Then, to install system-wide in <code>/usr/local</code>:</p>
+<a href="http://pygments.org/">Pygments</a> (install the latest dev version of Pygments
+from <a href="http://dev.pocoo.org/hg/pygments-main">its Mercurial repo</a>), and
+<a href="http://coffeescript.org/">CoffeeScript</a>.  Then, to install system-wide in
+<code>/usr/local</code>:</p>
 
 <pre><code>sudo cake install
 </code></pre>
