Adding Github link and license to the docs. Issue #20

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ This page is the result of running Docco against its own source file.</p>
 <p>...will generate linked HTML documentation for the named source files, saving
 it into a <code>docs</code> folder.</p>
 
+<p>The <a href="http://github.com/jashkenas/docco">source for Docco</a> is available on GitHub,
+and released under the MIT license.</p>
+
 <p>To install Docco, first make sure you have <a href="http://nodejs.org/">Node.js</a>,
 <a href="http://pygments.org/">Pygments</a> (install the latest dev version of Pygments
 from <a href="http://dev.pocoo.org/hg/pygments-main">its Mercurial repo</a>), and
