--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ also by Mr. Tomayko.</p></li>
 <li><p>For <strong>Clojure</strong> fans, <a href="http://blog.fogus.me/">Fogus</a>'s 
 <a href="http://fogus.me/fun/marginalia/">Marginalia</a> is a bit of a departure from 
 "quick-and-dirty", but it'll get the job done.</p></li>
+<li><p><strong>Lua</strong> enthusiasts can get their fix with 
+<a href="https://github.com/rgieseke">Robert Gieseke</a>'s <a href="http://rgieseke.github.com/locco/">Locco</a>.</p></li>
 <li><p>And if you happen to be a <strong>.NET</strong>
 aficionado, check out <a href="https://github.com/dontangg">Don Wilson</a>'s 
 <a href="http://dontangg.github.com/nocco/">Nocco</a>.</p></li>
