Update docs about block comment support.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ from <a href="http://dev.pocoo.org/hg/pygments-main">its Mercurial repo</a>). Th
 </code></pre>
 
 <p>Docco can be used to process CoffeeScript, JavaScript, Ruby, Python, or TeX files.
-Only single-line comments are processed -- block comments are ignored.</p>
+By default only single-line comments are processed, block comments may be included
+by passing the <code>-b</code> flag to Docco.</p>
 
 <h3 id="partnersincrime">Partners in Crime:</h3>
 
