Update lib and index page.  This is related to #131, which is not working properly because the built lib is out of date (still using "mkdir -p" instead of node fs api.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Sections take the form:</p>
 
 <p>Highlights parsed sections of code, using <strong>Pygments</strong> over stdio,
 and runs the text of their corresponding comments through <strong>Markdown</strong>, using
-<a href="http://attacklab.net/showdown/">Showdown.js</a>.  If Pygments is not present
+<a href="https://github.com/coreyti/showdown">Showdown.js</a>.  If Pygments is not present
 on the system, output the code in plain text.</p>
 
 <p>We process all sections with single calls to Pygments and Showdown, by 
