adding new layout to the help

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Parse options using <a href="https://github.com/visionmedia/commander.js">Comman
   c = config
   commander.version(version)
     .usage(<span class="string">'[options] files'</span>)
-    .option(<span class="string">'-l, --layout [name]'</span>,    <span class="string">'choose a built-in layout (parallel or linear)'</span>, c.parallel)
+    .option(<span class="string">'-l, --layout [name]'</span>,    <span class="string">'choose a layout (parallel, linear or classic)'</span>, c.parallel)
     .option(<span class="string">'-o, --output [path]'</span>,    <span class="string">'output to a given folder'</span>, c.output)
     .option(<span class="string">'-c, --css [file]'</span>,       <span class="string">'use a custom css file'</span>, c.css)
     .option(<span class="string">'-t, --template [file]'</span>,  <span class="string">'use a custom .jst template'</span>, c.template)
