Adding PHP sourceMakeup as a partner in crime

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ available as a gem.</p>
 <a href="http://rtomayko.github.com/shocco/">Shocco</a>, a port for the <strong>POSIX shell</strong>,
 also by Mr. Tomayko.</p>
 </li>
-<li><p>If Python&#39;s more your speed, take a look at
+<li><p>If <strong>Python</strong> is more your speed, take a look at
 <a href="http://github.com/fitzgen">Nick Fitzgerald</a>&#39;s <a href="http://fitzgen.github.com/pycco/">Pycco</a>.</p>
 </li>
 <li><p>For <strong>Clojure</strong> fans, <a href="http://blog.fogus.me/">Fogus</a>&#39;s
@@ -82,6 +82,10 @@ also by Mr. Tomayko.</p>
 </li>
 <li><p>There&#39;s a <strong>Go</strong> port called <a href="http://nikhilm.github.com/gocco/">Gocco</a>,
 written by <a href="https://github.com/nikhilm">Nikhil Marathe</a>.</p>
+</li>
+<li><p>Your all you <strong>PHP</strong> buffs out there, Fredi Bach&#39;s
+<a href="http://jquery-jkit.com/sourcemakeup/">sourceMakeup</a> (we&#39;ll let the faux pas
+with respect to our naming scheme slide), should do the trick nicely.</p>
 </li>
 <li><p><strong>Lua</strong> enthusiasts can get their fix with
 <a href="https://github.com/rgieseke">Robert Gieseke</a>&#39;s <a href="http://rgieseke.github.com/locco/">Locco</a>.</p>
