update link for Pycco

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ available as a gem.</p>
 also by Mr. Tomayko.</p>
 </li>
 <li><p>If <strong>Python</strong> is more your speed, take a look at
-<a href="http://github.com/fitzgen">Nick Fitzgerald</a>‘s <a href="http://fitzgen.github.io/pycco/">Pycco</a>.</p>
+<a href="http://github.com/fitzgen">Nick Fitzgerald</a>‘s <a href="https://pycco-docs.github.io/pycco/">Pycco</a>.</p>
 </li>
 <li><p>For <strong>Clojure</strong> fans, <a href="http://blog.fogus.me/">Fogus</a>‘s
 <a href="http://fogus.me/fun/marginalia/">Marginalia</a> is a bit of a departure from
