Fixes #364, clarify that langauges need to be listed in languages.json

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ and is released under the <a href="http://lillicense.org/v1.html">Lil License</a
 doesn’t handle your favorite yet, feel free to
 <a href="https://github.com/jashkenas/docco/blob/master/resources/languages.json">add it to the list</a>.
 Finally, the <a href="http://coffeescript.org/#literate">“literate” style</a> of <em>any</em>
-language is also supported — just tack an <code>.md</code> extension on the end:
+language listed in <a href="https://github.com/jashkenas/docco/blob/master/resources/languages.json">languages.json</a> 
+is also supported — just tack an <code>.md</code> extension on the end:
 <code>.coffee.md</code>, <code>.py.md</code>, and so on.</p>
 <h2 id="partners-in-crime-">Partners in Crime:</h2>
 
