update Marginalia url
old url was 404ing

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ also by Mr. Tomayko.</p>
 <a href="http://github.com/fitzgen">Nick Fitzgerald</a>‘s <a href="https://pycco-docs.github.io/pycco/">Pycco</a>.</p>
 </li>
 <li><p>For <strong>Clojure</strong> fans, <a href="http://blog.fogus.me/">Fogus</a>‘s
-<a href="http://fogus.me/fun/marginalia/">Marginalia</a> is a bit of a departure from
+<a href="https://gdeer81.github.io/marginalia/">Marginalia</a> is a bit of a departure from
 “quick-and-dirty”, but it’ll get the job done.</p>
 </li>
 <li><p>There’s a <strong>Go</strong> port called <a href="http://nikhilm.github.io/gocco/">Gocco</a>,
