Update Pycco repo URL

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@ available as a gem.</p>
 also by Mr. Tomayko.</p>
 </li>
 <li><p>If <strong>Python</strong> is more your speed, take a look at
-<a href="http://github.com/fitzgen">Nick Fitzgerald</a>‘s <a href="http://fitzgen.github.io/pycco/">Pycco</a>.</p>
+  <a href="https://github.com/pycco-docs/pycco">Pycco</a>, originally developed by
+  <a href="http://github.com/fitzgen">Nick Fitzgerald</a> and now maintained by
+  the <a href="https://github.com/pycco-docs">pycco-docs</a> community.</p>
 </li>
 <li><p>For <strong>Clojure</strong> fans, <a href="http://blog.fogus.me/">Fogus</a>‘s
 <a href="http://fogus.me/fun/marginalia/">Marginalia</a> is a bit of a departure from
