--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ aficionado, check out <a href="https://github.com/dontangg">Don Wilson</a>‘s
 is a <strong>CoffeeScript</strong> fork of Docco that adds a searchable table of contents,
 and aims to gracefully handle large projects with complex hierarchies of code.</p>
 </li>
-<li><p>For ES6 fans, <a href="https://github.com/mobily-enterprises/docco-next">Docco Next</a>
+<li><p>For <strong>ES6</strong> fans, <a href="https://github.com/mobily-enterprises/docco-next">Docco Next</a>
 is an expanded rewrite of Docco in modern JavaScript, thoroughly commented,
 and with the bonus that your existing templates will still work.</p>
 </li>
