--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ source files for languages for which we have definitions.</p>
       
         
         <p>The user is able to override the layout file used with the <code>--template</code> parameter.
-In this case, it is also neccessary to explicitly specify a stylesheet file.
+In this case, it is also necessary to explicitly specify a stylesheet file.
 These custom templates are compiled exactly like the predefined ones, but the <code>public</code> folder
 is only copied for the latter.</p>
 
